--- a/Gilbert/src/main/resources/templates/admin/adminpostpage.html
+++ b/Gilbert/src/main/resources/templates/admin/adminpostpage.html
@@ -13,7 +13,7 @@
 <body>
 <section layout:fragment="content">
     <header th:replace="~{/fragments/header :: header}"></header>
-    <div class="container">
+    <div class="admin-container">
         <div class="admin-panel">
             <div class="settings-group">
                 <div class="header">
