--- a/Gilbert/src/main/resources/templates/post/details.html
+++ b/Gilbert/src/main/resources/templates/post/details.html
@@ -154,7 +154,7 @@
 <body>
 
 <section layout:fragment="content">
-<div class="container">
+<div class="post-details-container">
     <div class="post-details">
         <h1 th:text="${post.name}">Post Name</h1>
         <div>
