--- a/Gilbert/src/main/resources/templates/post/create.html
+++ b/Gilbert/src/main/resources/templates/post/create.html
@@ -64,7 +64,7 @@
 <body>
 
 <section layout:fragment="content">
-<div class="container">
+<div class="post-details-container">
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px;">
         <h1 style="margin: 0;">Create New Post</h1>
     </div>
