--- a/Gilbert/src/main/resources/templates/post/edit.html
+++ b/Gilbert/src/main/resources/templates/post/edit.html
@@ -164,7 +164,7 @@
 <body>
 
 <section layout:fragment="content">
-    <div class="container">
+    <div class="post-details-container">
         <div class="edit-post-form">
             <h1>Edit Post</h1>
 
