--- a/Gilbert/src/main/resources/templates/search/layout.html
+++ b/Gilbert/src/main/resources/templates/search/layout.html
@@ -11,7 +11,7 @@
             </label>
         </form>
     </div>
-    <div class="container">
+    <div class="search-container">
         <div id="search-results" class="posts-grid">
             <div th:if="${#lists.isEmpty(posts)}" class="no-posts">
                 <p>No items are available at the moment.</p>
